--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: HInterOp
+title: SymbolicNS3
 theme: jekyll-theme-cayman
-description: Efficient Interoperability Testing of Heterogeneous Network Protocol Implementations
+description: Symbolic Network Simulator
