--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: SymbolicNS3
 theme: jekyll-theme-cayman
-description: Symbolic Network Simulator
+description: Enhancing Network Simulator for Symbolic Execution
