--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: SymbolicNS3
 theme: jekyll-theme-cayman
-description: Enhancing Network Simulator NS-3 for Symbolic Execution
+description: Enhancing Network Simulator ns-3 for Symbolic Execution
